samples/_failures_safe/1761728264_ef6412_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b7c46e73.c: In function ‘simulate_data_processing’:
./samples/SAFE/__tmp_b7c46e73.c:172:9: error: expected declaration or statement at end of input
  172 |         record.value = (double)(i + 1);
      |         ^~~~~~
./samples/SAFE/__tmp_b7c46e73.c:172:9: error: expected declaration or statement at end of input
